WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
Bug 38111
[Qt] Fix compilation against Qt 4.7
https://bugs.webkit.org/show_bug.cgi?id=38111
Summary
[Qt] Fix compilation against Qt 4.7
Andreas Kling
Reported
2010-04-26 04:08:34 PDT
Some QtMultimedia things have been moved into QtMediaServices
Attachments
Patch
(2.38 KB, patch)
2010-04-26 04:09 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2010-04-26 04:09:45 PDT
Created
attachment 54272
[details]
Patch
Tor Arne Vestbø
Comment 2
2010-04-26 04:12:36 PDT
Comment on
attachment 54272
[details]
Patch LGTM
WebKit Commit Bot
Comment 3
2010-04-26 04:32:18 PDT
Comment on
attachment 54272
[details]
Patch Clearing flags on attachment: 54272 Committed
r58246
: <
http://trac.webkit.org/changeset/58246
>
WebKit Commit Bot
Comment 4
2010-04-26 04:32:22 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 5
2010-04-28 01:28:13 PDT
Revision
r58246
cherry-picked into qtwebkit-2.0 with commit a0e5f178929871a45d4274ceae3680e23e4a1986
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug