2010-04-26  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Tor Arne Vestbø.

        [Qt] Fix compilation against Qt 4.7

        Some QtMultimedia things have been moved into QtMediaServices
        https://bugs.webkit.org/show_bug.cgi?id=38111

        * WebCore.pro:
        * platform/graphics/qt/MediaPlayerPrivateQt.cpp:
        (WebCore::MediaPlayerPrivate::supportsType):
        (WebCore::MediaPlayerPrivate::totalBytes):

Canonical link: https://commits.webkit.org/49526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58246 268f45cc-cd09-0410-ab3c-d52691b4dbfc